Sun Sep 10 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* ustime.c: use the version of getTimeZoneOffset in :os:crypto: for
		_MACINTOSH.

Wed Sep  6 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* localaddr.c changed name to oslocaladdr.c for metrowerks project
		file management.

	* ustime.c:  changed mac version of krb5_crypto_us_timeofday to compile
		with contemporary header files for metrowerks

	* macsock.c:  added tcp stream support to suppliment the udp.  Added
		getsockname.  Fixed gethostname to stop appending '.' to the
		end of a connonical hostname.

	* net_write.c:  need to cast file descriptors to SOCKETs

	* net_read.c:  need to cast file descriptors to SOCKETs

	* krbfileio.c:  mac doesn't support fsync, define the usage out

	* init_os_cxt.c:  move the default location of the krb conf file to
		the preferences folder.  Added some routines to take a 
		mac FSSpec and turn it into a mac pathname string.

	* hst_realm.c:  assign a NULL to retrealms to clean up a warning.

	* genaddrs.c:  support getsockname from macsock

	* ccdefname.c:  move the cred cache to the preferneces folder for mac

	* an_to_ln.c:  turn functions off because I don't have a dbm library

	* timeofday.c:  make krb5_timeofday use krb5_crypto_us_timeofday to 
		incorperate the epoch difference between mac and unix.

Fri Sep  1 00:47:27 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (check-unix): Add a test case to make sure
		krb5_get_host_realm does something sane when passed in a
		hostname which doesn't have a default domain.

	* hst_realm.c (krb5_get_host_realm): If an hostname does not have
		a domain, don't try to get a domain default (which
		results in a strange error being returned).

	* toffset.c: Added new file which implements the abstract
		interfaces for manipulating the time offset fields in the
		os context.

	* ustime.c (krb5_us_timeofday): Add support for using the time
		offset fields in the os context.
